# batou

./: .coveragerc  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yaml  .travis.yml  CHANGES.md  CHANGES.txt  CODEOWNERS  COPYRIGHT.txt  FAQ  HACKING.txt  HISTORY.old.txt  HISTORY.txt  LICENSE.txt  MANIFEST.in  README  README.md  README.md.in  README.txt  SECURITY.md  TODO  ZPL.txt  age-doc.md  appenv.py  batou.sublime-project  batou3-notes  bootstrap  bootstrap.sh  buildout.cfg  changelog.sh  conftest.py  develop.sh  flake.nix  pyproject.toml  pytest.ini  re-encrypt-fixture-secrets.sh  release-this.sh  rename-example-secrets.py  (+10 more)
.github/workflows/: bootstrap.sh  bootstrap.yml  lint.yml  main.yml  nix.yml  pre-commit.yaml
CHANGES.d/: 20241029_095544_elikowa.md  20241029_100619_elikowa.md  20241029_100632_elikowa.md  20241029_100641_elikowa.md  20241029_102331_elikowa_git_bundle_do_not_fail_after_rebase.md  20241029_102647_elikowa_sensitive_data_tristate.md  20241029_102921_elikowa_HEAD.md  20241111_112333_elikowa_better_logging_reasons.md  20241118_043939_elikowa_add_check_and_predict_local_flag.md  20241118_094425_cz_improve_component_init_performance.md  20241118_114301_cz_regression.md  20250120_021215_elikowa_409_avoid_provisioning_when_predicting.md  20250121_145243_ct_fix_devhost_multi_machine.md  20250217_112817_ph_speedup_batou_age_interaction.md  20250224_121544_ph_HEAD.md  20250305_084857_cz_fix_git_bundle_shipping.md  20250305_150807_cz_fix_git_empty_remote.md  20250512_130741_elikowa_add_ComponentUsageError_for_syncDirectory.md  20250523_155904_elikowa_drop_python_37.md  20250526_102553_elikowa_limit_terminal_column_width_for_tests.md  20250603_085638_ph_fix_git_interaction.md  20250811_130629_elikowa_fix_provision_2_6_0.md  20251015_150253_elikowa_FC_48241_disk_size_devhost.md  20251212_140613_cz_fix_purge_symlink.md  20260126_101317_ct_BATOU_525_provision_make_channel_update_optional.md  20260127_110606_ts_ts_speed_up_local_consistency_check.md  20260217_123211_ts_FC_51547_too_many_open_files.md  20260307_171902_cz_re_encrypt_stable.md  20260316_133213_cz_pkgresources.md  20260325_095839_ts_ts_uv.md  20260326_161848_ts_ts_py314_ruff.md
doc/: .requirements  Makefile  about.txt  api.txt  conf.py  index.txt  introduction.txt  keep-building.sh  legal.txt  notes.rst
doc/notes/: model  thoughts
doc/source/: cmmi.txt  component-advanced.txt  component-configure.txt  component-tutorial.txt  component-update.txt  conf.py  create-new-project.txt  download.txt  environment.txt  file.txt  index.txt  index.txt.orig  installation.txt  introduction.txt  keyfeatures.txt  legal.txt  local.txt  network.txt  platform.txt  principles.txt  python.txt  remote.txt  requirements.txt  resources.txt  secrets.txt  supervisor.txt  support.txt  templating.txt  update.txt  upgrading.txt
doc/source/_static/: batou.css
doc/source/_templates/: sidebarintro.html  sidebarlogo.html
doc/source/api/: cmmi.txt  component-configure.txt  component.txt  components.txt  environment.txt  exceptions.rst  file.txt  foundation.txt  library.txt  python.txt  resources.txt  supervisor.txt  templates.txt  utilities.txt
doc/source/cli/: index.txt  local.txt
doc/source/components/: cmmi.txt  downloads-vcs.txt  files.txt  python.txt  services.txt
doc/source/dev/: authors.txt  contributing.txt  testing.txt  todo.txt
doc/source/extra/: batou
doc/source/guide/: commands.txt  components.txt  environments.txt  general-model.graphml  index.txt  library.txt  local.txt  remote.txt
doc/source/introduction/: index.txt  principles.txt
doc/tutorials/: component.txt  helloworld.txt
examples/api/: index.txt
examples/django/: batou
examples/durations/: .batou.json
examples/errors/: batou  requirements.txt  todo
examples/errors2/: .batou.json  requirements.txt  secrets.cfg.clear
examples/errorsnohost/: .batou.json
examples/hello/: fabfile.py
examples/ignores/: .batou.json  batou  ignores_output.txt
examples/largetempl/: .batou.json  batou  requirements.txt
examples/package/: batou
examples/sensitive-values/: .batou.json  requirements.txt  secrets.cfg.age.clear
examples/tutorial-buildout/: requirements.txt
examples/tutorial-component/: batou  buildout.cfg
examples/tutorial-helloworld/: batou  bootstrap.py  buildout.cfg
examples/tutorial-parallelize/: Vagrantfile  provision.nix
examples/tutorial-provision-container/: appenv  batou
examples/tutorial-secrets/: README.txt  buildout.cfg  gocept-secrets.cfg.clear  tutorial-foobar.yaml.clear  tutorial-secrets.cfg.clear
examples/vagrant/: Vagrantfile  batou  bootstrap.sh  provision.nix
examples/vagrant-multi/: Vagrantfile  provision.nix
examples/venvs/: batou
nix/: batou.nix  tox-uv.nix
nix/integration-tests/: rsyncgit.nix
nix/python26/: default.nix
src/: setup.py
src/batou/: __init__.py  _output.py  bootstrap-template  bootstrap.py  buildout.py  c.py  component.py  conftest.py  deploy.py  environment.py  fixtures.py  host.py  init.py  insecure-private.key  local.py  log.py  main.py  output.py  passphrase.py  provision.py  release.py  remote.py  remote_core.py  repository.py  requirements.txt  resources.py  secrets.py  service.py  template.py  update.py  utils.py  version.txt  vfs.py
stubs/: README.md  pyproject.toml  ruff.toml  stubtest-allowlist.txt
stubs/batou/: __init__.pyi  _output.pyi  agent.pyi  c.pyi  component.pyi  deploy.pyi  environment.pyi  fixtures.pyi  host.pyi  main.pyi  provision.pyi  remote_core.pyi  repository.pyi  resources.pyi  template.pyi  utils.pyi  vfs.pyi
stubs/batou/lib/: appenv.pyi  archive.pyi  buildout.pyi  cmmi.pyi  cron.pyi  debian.pyi  download.pyi  file.pyi  git.pyi  goceptnet.pyi  logrotate.pyi  mercurial.pyi  mysql.pyi  nagios.pyi  package.pyi  python.pyi  service.pyi  supervisor.pyi  svn.pyi
stubs/batou/migrate/: __init__.pyi
stubs/batou/migrate/migrations/: 2301.pyi  2302.pyi  2400.pyi
stubs/batou/secrets/: __init__.pyi  edit.pyi  encryption.pyi  manage.pyi
typing_tests/: test_stubs.py
versions/: versions.cfg  ztk-versions-1.1.4.cfg
(+320 files in other folders)
