[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.27"]

[tool.uv.workspace]
members = ["stubs"]

[tool.uv.sources]
stubs = { workspace = true }

[project]
name = "batou"
description = "A utility for automating multi-host, multi-environment software builds and deployments."
readme = "README.md"
keywords = ["deployment"]
license = "BSD-2-Clause"
authors = [{ name = "Christian Theune", email = "ct@flyingcircus.io" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
version = "2.8.0.dev0"
dependencies = [
  "ConfigUpdater>=3.2",
  "Jinja2>=3.1.4",
  "execnet>=1.8.1",
  "py>=1.11.0",
  "pyyaml",
  "remote-pdb",
  "requests",
  "setuptools>=66.1.0",
]

[project.urls]
Homepage = "https://batou.readthedocs.io/en/latest/"
Repository = "https://github.com/flyingcircusio/batou"

[project.scripts]
batou = "batou.main:main"

[project.entry-points."zc.buildout"]
requirements = "batou.buildout:Requirements"

[project.entry-points."batou.provisioners"]
fc-nixos-dev-container = "batou.provision:FCDevContainer"
fc-nixos-dev-vm = "batou.provision:FCDevVM"


# PEP 735
[dependency-groups]
dev = [
  "scriv",
  "tox",
  "tox-uv-bare",
  { include-group = "test" },
]
test = [
  "mock",
  "pytest",
  "pytest-cov",
  "pytest-instafail",
  "pytest-timeout",
]
docs = [
  "furo",
  "recommonmark",
  "sphinx",
  "sphinx-copybutton",
]
lint = [
  "pre-commit",
  "ruff",
]
typing = [
  "flake8-pyi",
  "mypy",
  "ty",
]
release = [
  "zest.releaser",
]

[tool.mypy]
files = ["stubs"]
[[tool.mypy.overrides]]
module = ["pytest", "pytest.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 80
exclude = [
  "appenv.py",
  "examples/errors/components/component5/component.py",
]

[tool.ruff.lint]
select = ["I"]
ignore = [
  "F401", # imported but unused
  "E501",  # line too long
]

[tool.pytest.ini_options]
testpaths = ["src"]
addopts = [
  "-W", "error",
  "--timeout=120",
  "--tb=native",
  "--instafail",
  "--import-mode=importlib",
]
markers = [
  "slow: This is a slow test.",
]

[tool.tox]
env_list = ["3.10", "3.11", "3.12", "3.13", "3.14"]
skip_missing_interpreters = true
allowlist_externals = ["git"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
package = "wheel"
setenv = { APPENV_BEST_PYTHON = "{envpython}", IN_TOX_TEST = "1"}
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", extend = true }]]

[tool.tox.env.cov]
base_python = [ "3.14" ]
package = "wheel"
runner = "uv-venv-lock-runner"
setenv = { APPENV_BEST_PYTHON = "{envpython}" }
dependency_groups = [ "test" ]
description = "Tests for newest supported Python version with coverage"
commands = [
  [ "pytest", "--cov=src/batou", "--cov-report=html" ],
]

[tool.tox.env.pre-commit]
description = "This env runs all linters configured in .pre-commit-config.yaml"
skip_install = true
dependency_groups = ["lint"]
commands = [
  ["pre-commit", "run", "--all-files", "--show-diff-on-failure"]
]

[tool.tox.env.stubs]
description = "Lint + type-check stubs (ruff, flake8-pyi, mypy, stubtest, ty)"
skip_install = true
setenv = { MYPYPATH = "stubs" }
commands = [
  ["uv", "run", "ruff", "check", "stubs/"],
  ["uv", "run", "ruff", "format", "--check", "stubs/"],
  ["uv", "run", "--with", "flake8-pyi", "flake8", "--select=Y0", "stubs/"],
  ["uv", "run", "--with", "mypy", "mypy", "stubs/"],
  ["uv", "run", "--with", "mypy", "python", "-m", "mypy.stubtest", "batou", "--allowlist", "stubs/stubtest-allowlist.txt"],
  ["uv", "run", "--with", "ty", "ty", "check", "stubs/"],
]

[tool.tox.env.typing]
description = "Type-check batou source code with stubs"
skip_install = true
setenv = { MYPYPATH = "stubs" }
commands = [
  ["uv", "run", "--with", "mypy", "mypy", "src/", "--strict", "--ignore-missing-imports"],
  ["uv", "run", "--with", "ty", "ty", "check", "src/", "examples/"],
]

[tool.scriv]
format = "md"
fragment_directory = "CHANGES.d"
output_file = "CHANGES.md"
version = "unreleased"
entry_title_template = ""
new_fragment_template = "- New changelog entry."
insert_marker = "- Nothing changed yet."
categories = ""

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/batou"]
artifacts = [
  "src/batou/init-template/**/*",
  "src/batou/tests/fixture/**/*",
  "src/batou/secrets/tests/fixture/**/*",
  "src/batou/lib/resources/**/*",
  "src/batou/insecure-private.key",
  "src/batou/**/*.txt",
  "src/batou/**/*.in",
  "src/batou/**/*.key",
]
